# 3D-Point-Cloud-KITTI-Evaluation

./: CMakeLists.txt  create_pred_from_ground_truth.py  get-car-evaluation.sh  get-ped-cyc-evaluation.sh  load_pred_from_point_pillars_pred.py
src/: evaluate_object_3d_offline.cpp
